# stardust_simworld

./: Cargo.toml  Stardust.code-workspace
src/: lib.rs
src/basics/: mod.rs  time_per_frame.rs
src/components/: change_component.rs  determining_components.rs  finals.rs  mod.rs  stat_component.rs
src/grid/: at_grid.rs  grid.rs  grid_plugin.rs  mod.rs
src/grid_gas/: at_grid_gas.rs  edge_type.rs  grid_gas_bundle.rs  grid_gas_edge_type.rs  grid_gas_spread.rs  interact_grid_gas_body.rs  mod.rs  resource.rs  spread.rs
src/multi_body/: attach.rs  attach_level.rs  change_spread.rs  mod.rs  postion_set.rs
src/physics/: apply_rotation.rs  apply_velocity.rs  bundle.rs  mass.rs  mod.rs  systems.rs
src/resources/: mod.rs  simulate_speed.rs
src/schedule/: mod.rs
src/simulate_speed/: mod.rs  set_simulate_speed_even.rs  simulate_speed.rs
src/statistic_physics/: calculate_states.rs  matters.rs  matters_bundle.rs  mod.rs
src/system_sets/: mod.rs  sets.rs
src/systems/: calculate_determining_to_state.rs  determining_components_apply_changes.rs  final_apply_delta.rs  mod.rs
src/transform/: apply_velocity.rs  calculate_pos_state.rs  mod.rs  tramsform.rs
src/utils/: impl_reflect.rs  mod.rs  rotation_algebra.rs  scope_trait.rs
